--- a/index.html
+++ b/index.html
@@ -4,29 +4,43 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AjjNews</title>
 </head>
 <body>
     <ul class="one">
-        <li><a href="">home</a></li>
-        <li><a href="">پاکستان ایران حملے</a></li>
-        <li><a href="">خواتین</a></li>
+        <li><a href="">Watch Live</a></li>
+        <li><a href="">Election 2024</a></li>
+        <li><a href="">Pakistan Iran tensions</a></li>
     </ul>
     <ul class="two">
-        <li><a href="">لائیو ٹی وی</a></li>
-        <li><a href="">الیکشن 2024</a></li>
-        <li><a href="">الیکشن حلقہ بہ حلقہ</a></li>
+        <li><a class="a2" href="">اردو</a></li>
+        <li><a href="">Petrol prices</a></li>
+        <li><a href="">Hamas Israel attack</a></li>
     </ul>
-    <img src=" C:\Users\Mahar\Desktop\New folder (7)\Ajj-News-/Aaj_News_(television_channel)_logo.png" alt="">
-    <p>ہفتہ 20 جنوری 2024 | 08 رجب 1445</p>
-    <div class="navebar">
-        <a href="">تازہ ترین</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">قومی</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">الیکشن 2024</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">کاروبار</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">کھیل</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">لائف اسٹائل</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">ویڈیوز</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src=" https://upload.wikimedia.org/wikipedia/en/0/06/Aaj_News_%28television_channel%29_logo.png" alt="">
+    <p>Monday, January 29, 2024|17 Rajab 1445</p>
+    <div class="nav">
+        <a href="#">LATEST</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">PAKISTAN</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">WORLD</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">BUSINESS & ECONOMY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">SPORTS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">LIFE & STYLE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#">VIDEOS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </div>
+    <div class="div1">
+        <h2>Papular</h2>
+        <ol>
+            <li><a href="">Singer Rahat Fateh Ali Khan issues clarification after viral video</a></li>
+            <li><a href="">Five women among six killed after vehicle plunges into ravine in GB’s Diamer</a></li>
+            <li><a href="">ECP allots election symbols to PTI’s Sanam Javed</a></li>
+            <li><a href="">Saudi govt allows performing nikkah at two holiest sites in Makkah, Medina</a></li>
+            <li><a href="">Kohistan fatwa bars women from election canvassing but their is a twist</a></li>
+        </ol>
+    </div>
+    <div class="div2">
+        <img class="img2" src="https://i.aaj.tv/medium/2024/01/2910532308ed055.jpg?r=110021" alt="">
+        <a href="#">Journalists harassment: SC orders FIA notices to be withdrawn</a>
     </div>
 </body>
 </html>
